--- a/untitled.html
+++ b/untitled.html
@@ -6,15 +6,14 @@
 <table border="0">
   <tbody><tr>
     <td width="75%">
-      <h1>张三</h1>
-      <p><b>硕士研究生</b></p>
-      <p><b>××大学××学院</b></p>
-      <p><b>邮箱：1234567789@qq.com</b></p>
-      <p><b>地址：××市××区××路××号××大学，××楼，邮编×××</b></p>
+      <h1>Shuchao Deng</h1>
+      <p><b>Master's degree in progress</b></p>
+      <p><b>School of Computer Science, Sichuan University</b></p>
+      <p><b>shuchao@stu.scu.edu.cn</b></p>
       <p><a href="/index-en.html">English Version</a></p>
     </td>
     <td width="25%">
-      <img src="/zhengjianzhao.jpg" width="100%">
+      <img src="/shuchao.jpg" width="100%">
     </td>
   </tr>
 </tbody></table>
