--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p><a href="/index-en.html">English Version</a></p>
     </td>
     <td width="25%">
-      <img src="/shuchao.jpg" width="100%">
+      <img src="/shuchao.jpg" heigt="100%">
     </td>
   </tr>
 </tbody></table>
