--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <p><a href="/index-en.html">English Version</a></p>
     </td>
     <td width="25%">
-      <img src="/shuchao.jpg" heigt="100%">
+      <img src="/shuchao.jpg" weight="100%">
     </td>
   </tr>
 </tbody></table>
 </div>
 
 <hr>
-<p>张三，男，个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介
+<p>邓书超，男，个人简介
 
 </p>
 <hr>
