--- a/index.html
+++ b/index.html
@@ -12,41 +12,38 @@
       <p><b>shuchao@stu.scu.edu.cn</b></p>
     </td>
     <td width="25%">
-      <img src="/shuchao.jpg" weight="25%">
+      <img src="/shuchao.jpg" width="100%">
     </td>
   </tr>
 </tbody></table>
 </div>
 
-<hr>
-<p>邓书超，男，个人简介
+---
 
-</p>
-<hr>
-<h3>最新消息</h3>
-<ol>
-<li>消息1×××</li>
-</ol>
-<h3>研究方向</h3>
-<ul>
-<li>文本挖掘</li>
-<li>知识图谱</li>
-</ul>
-<h3>荣誉奖励</h3>
-<ul>
-<li>奖学金</li>
-<li>荣誉称号</li>
-<li>比赛获奖</li>
-</ul>
-<h3>项目研究</h3>
-<h4>公司/学校/研究所（2013.9~2017.6）</h4>
-<ul>
-<li><strong>项目1</strong><br>项目描述</li>
-<li><strong>项目2</strong><br>项目描述</li>
-</ul>
-<h4>公司/学校/研究所（2017.9~至今）</h4>
-<ul>
-<li><strong>项目1</strong><br>项目描述</li>
-<li><strong>项目2</strong><br>项目描述</li>
-</ul>
-</body></html>
+Shuchao Deng.
+
+---
+
+### Latest News
+1. One paper was published on GECCO 2022
+
+### Research Directions
+- Neural Architecture Search
+- Facial expression recognition
+
+### Honors and Awards
+- Scholarship
+- Honors
+- Competition Awards
+### Project Research
+#### Company/School/Institute (2013.9~2017.6)
+- **Project 1**  
+Project description
+- **Project 2**  
+Project Description
+
+#### Company/School/Institute (2017.9~present)
+- **Project 1**  
+Project Description
+- **Project 2**  
+Project Description
