--- a/index.html
+++ b/index.html
@@ -7,48 +7,45 @@
   <tbody><tr>
     <td width="75%">
       <h1>Shuchao Deng</h1>
-      <p><b>硕士研究生</b></p>
-      <p><b>××大学××学院</b></p>
-      <p><b>邮箱：1234567789@qq.com</b></p>
-      <p><b>地址：××市××区××路××号××大学，××楼，邮编×××</b></p>
-      <p><a href="/index-en.html">English Version</a></p>
+      <p><b>Master's degree in progress</b></p>
+      <p><b>School of Computer Science, Sichuan University</b></p>
+      <p><b>shuchao@stu.scu.edu.cn</b></p>
     </td>
     <td width="25%">
-      <img src="/zhengjianzhao.jpg" width="100%">
+      <img src="/shuchao.jpg" width="100%">
     </td>
   </tr>
 </tbody></table>
 </div>
 
 <hr>
-<p>张三，男，个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介个人简介
+<p>Shuchao Deng, students
 
 </p>
 <hr>
-<h3>最新消息</h3>
+<h3>Latest News</h3>
 <ol>
-<li>消息1×××</li>
+<li>News1×××</li>
 </ol>
-<h3>研究方向</h3>
+<h3>Research Directions</h3>
 <ul>
-<li>文本挖掘</li>
-<li>知识图谱</li>
+<li>Neural Architecture Search</li>
+<li>Facial expression recognition</li>
 </ul>
-<h3>荣誉奖励</h3>
+<h3>Honors and Awards</h3>
 <ul>
-<li>奖学金</li>
-<li>荣誉称号</li>
-<li>比赛获奖</li>
+<li>Scholarship</li>
+<li>Honors</li>
+<li>Competition Awards</li>
 </ul>
-<h3>项目研究</h3>
-<h4>公司/学校/研究所（2013.9~2017.6）</h4>
+<h3>Project Research</h3>
+<h4>Company/School/Institute (2013.9~2017.6) </h4>
 <ul>
-<li><strong>项目1</strong><br>项目描述</li>
-<li><strong>项目2</strong><br>项目描述</li>
+<li><strong>Project1</strong><br>Project description</li>
+<li><strong>Project2</strong><br>Project description</li>
 </ul>
-<h4>公司/学校/研究所（2017.9~至今）</h4>
+<h4>Company/School/Institute (2017.9~present) </h4>
 <ul>
-<li><strong>项目1</strong><br>项目描述</li>
-<li><strong>项目2</strong><br>项目描述</li>
+<li><strong>Project1</strong><br>Project Description</li>
 </ul>
 </body></html>
