--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <tbody><tr>
     <td width="75%">
       <h1>Shuchao Deng</h1>
-      <p><b>Master's degree in progress</b></p>
-      <p><b>School of Computer Science, Sichuan University</b></p>
-      <p><b>shuchao@stu.scu.edu.cn</b></p>
+      <p><b>Education: Master's degree in progress</b></p>
+      <p><b>Institution: School of Computer Science, Sichuan University</b></p>
+      <p><b>Email: shuchao@stu.scu.edu.cn</b></p>
     </td>
     <td width="25%">
       <img src="/shuchao.jpg" width="100%">
@@ -19,14 +19,19 @@
 </div>
 
 <hr>
-<p>Shuchao Deng, students
+<p>Deng Shuchao, a member of the Communist Party, is a student of Computer Science and Technology in the School of Computer Science; I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of the New Great Wall Sichuan University Self-improvement Society; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Love Parcels"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
 
 </p>
 <hr>
 <h3>Latest News</h3>
+
 <ol>
-<li>News1×××</li>
+<li>News: July 9-13, 2022, I attend the GECCO 2022 conference online and make a poster presentation</li>
+</ol>    
+<ol>
+<li>News: Mar. 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022)</li>
 </ol>
+
 <h3>Research Directions</h3>
 <ul>
 <li>Neural Architecture Search</li>
