--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </div>
 
 <hr>
-<p>Deng Shuchao, a member of the Communist Party, is a student of Computer Science and Technology in the School of Computer Science; I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of the New Great Wall Sichuan University Self-improvement Society; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Love Parcels"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
+<p> I am a graduate student in the School of Computer Science of Sichuan University, and I am a member of the Full-time Artificial Intelligence Branch of the School of Computer Science of Sichuan University (as a party leader). My current research is "Neural architecture search for science", and my supervisor is Prof. Sun Yanan.
+    
+    I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of the New Great Wall Sichuan University Self-improvement Society; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Love Parcels"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
 
 </p>
 <hr>
@@ -27,8 +29,6 @@
 
 <ol>
 <li>News: July 9-13, 2022, I attend the GECCO 2022 conference online and make a poster presentation</li>
-</ol>    
-<ol>
 <li>News: Mar. 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022)</li>
 </ol>
 
