--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <body marginheight="0"><div>
 <table border="0">
   <tbody><tr>
-    <td width="75%">
+    <td width="70%">
       <h1>Shuchao Deng</h1>
       <p><b>Education: Master's degree in progress</b></p>
       <p><b>Institution: School of Computer Science, Sichuan University</b></p>
       <p><b>Email: shuchao@stu.scu.edu.cn</b></p>
     </td>
-    <td width="25%">
+    <td width="30%">
       <img src="/shuchao.jpg" width="100%">
     </td>
   </tr>
@@ -21,7 +21,7 @@
 <hr>
 <p> I am a graduate student in the School of Computer Science of Sichuan University, and I am a member of the Full-time Artificial Intelligence Branch of the School of Computer Science of Sichuan University (as a party leader). My current research is "Neural architecture search for science", and my supervisor is Prof. Sun Yanan.
     
-    I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of the New Great Wall Sichuan University Self-improvement Society; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Love Parcels"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
+    I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of Self-Improvement Society Of Sichuan University; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Hope for Pearl"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
 
 </p>
 <hr>
@@ -29,28 +29,21 @@
 
 <ol>
 <li>News: July 9-13, 2022, I attend the GECCO 2022 conference online and make a poster presentation</li>
-<li>News: Mar. 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022)</li>
+<li>News: March 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022)</li>
 </ol>
 
 <h3>Research Directions</h3>
 <ul>
 <li>Neural Architecture Search</li>
-<li>Facial expression recognition</li>
+<li>Facial Expression Recognition</li>
 </ul>
+
 <h3>Honors and Awards</h3>
-<ul>
-<li>Scholarship</li>
-<li>Honors</li>
-<li>Competition Awards</li>
+<ul>    
+<ol>
+<li> September 2022, first Prize of Graduate Entrance Scholarship.</li>
+<li> June 2022, first prize of undergraduate graduation design at university level.</li>
+</ol>  
 </ul>
-<h3>Project Research</h3>
-<h4>Company/School/Institute (2013.9~2017.6) </h4>
-<ul>
-<li><strong>Project1</strong><br>Project description</li>
-<li><strong>Project2</strong><br>Project description</li>
-</ul>
-<h4>Company/School/Institute (2017.9~present) </h4>
-<ul>
-<li><strong>Project1</strong><br>Project Description</li>
-</ul>
+
 </body></html>
