--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@
 </p>
 <hr>
 <h3>Latest News</h3>
-
 <ol>
-<li>News: July 9-13, 2022, I attend the GECCO 2022 conference online and make a poster presentation</li>
-<li>News: March 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022)</li>
+<li>News: July 9-13, 2022, I attend the GECCO 2022 conference online and make a poster presentation.</li>
+<li>News: March 24, 2022, our paper "Neural architecture search using genetic algorithm for facial expression recognition" was accepted by the Genetic and Evolutionary Computation Conference 2022 (GECCO2022).</li>
 </ol>
 
 <h3>Research Directions</h3>
 <ol>
-<li>Neural Architecture Search</li>
-<li>Facial Expression Recognition</li>
+<li>Neural Architecture Search for Facial Expression Recognition.</li>
+<li>Artificial Intelligence for Scientific Computing.</li>
 </ol>  
 
 <h3>Honors and Awards</h3>    
