--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </div>
 
 <hr>
-<p> I am a graduate student in the School of Computer Science of Sichuan University, and I am a member of the Full-time Artificial Intelligence Branch of the School of Computer Science of Sichuan University (as a party leader). My current research is "Neural architecture search for science", and my supervisor is [Prof. Sun Yanan](https://yn-sun.github.io/).
+<p> I am a graduate student in the School of Computer Science of Sichuan University, and I am a member of the Full-time Artificial Intelligence Branch of the School of Computer Science of Sichuan University (as a party leader). My current research is "Neural architecture search for science", and my supervisor is Prof. Sun Yanan.
     
-    I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of Self-Improvement Society Of Sichuan University; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as ["Hope for Pearl"](https://baike.baidu.com/item/%E6%8D%A1%E5%9B%9E%E7%8F%8D%E7%8F%A0%E8%AE%A1%E5%88%92/6754468?fr=aladdin); I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
+    I was the head of the Administration Class 3 in the School of Computer Science and the head of the Project Department of Self-Improvement Society Of Sichuan University; I am willing to help others and organize many class activities such as college basketball games and actively serve my class and classmates; I am passionate about public welfare and am the head of the Public Welfare Club, actively organizing and participating in public welfare activities such as "Hope for Pearl"; I serve the community and participate in the "Guangjia Ride", with a service time of over 400h and raising more than 60,000 RMB.
 
 </p>
 <hr>
