--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 
 <h3>Honors and Awards</h3>    
 <ol>
-<li> September 2022, first Prize of Graduate Entrance Scholarship.</li>
-<li> June 2022, first prize of undergraduate graduation design at university level.</li>
+<li> September 2022, First Prize of Graduate Entrance Scholarship.</li>
+<li> November 2022, First prize of undergraduate graduation design at university level.</li>
+<li> June 2022, Top 100 Student Leaders of Sichuan University.</li>
+<li> June 2022, Star of Computer Science, Sichuan University.</li>
+<li> December 2020, Star of Self-improvement, Sichuan University.</li>
+<li> October 2020, The third Thanksgiving China Modern Scientist Bursary. </li>
 </ol>  
 
 </body></html>
